--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,7 @@
 }
 
 
-
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@600&display=swap');
 .App-header {
   background-color: #292E3D;
   min-height: 8vh;
@@ -19,6 +19,7 @@
   justify-content: center;
   font-size: calc(8px + 2vmin);
   color: white;
+  font-family: 'Roboto Slab', serif;
 }
 
 .App-link {
